k8s/workflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workflow-app
  template:
    metadata:
      labels:
        app: workflow-app
    spec:
      containers:
      # 1. FRONTEND CONTAINER
      - name: workflow-frontend
        image: joypatel2403/ci-cd-workflow-frontend:34
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

      # 2. BACKEND CONTAINER
      - name: workflow-backend
        image: joypatel2403/ci-cd-workflow-backend:34
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: workflow-app-service
spec:
  type: NodePort
  selector:
    app: workflow-app
  ports:
    # Exposing the frontend port (3000) to your browser
    - name: frontend
      port: 3000
      targetPort: 3000
      nodePort: 30050
    # Keeping the backend port (5000) accessible if needed
    - name: backend
      port: 5000
      targetPort: 5000
      nodePort: 30051
