k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workflow-ingress
spec:
  rules:
  - host: workflow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workflow-app-service
            port:
              number: 5000
  - host: db.workflow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
